# untp-publisher-service

backend/: Dockerfile  README.md  main.py
backend/app/: __init__.py  factory.py
backend/app/models/: credential.py  publications.py  registrations.py
backend/app/models/untp/v0_7_0/: __init__.py
backend/app/models/untp/v0_7_0/dia/: __init__.py  digital_identity_anchor.py  registered_identity.py
backend/app/routers/: credentials.py  test_suite.py
backend/app/validators/: untp.py
backend/tests/: conftest.py  test_untp_official_samples.py  test_untp_validate_endpoint.py
backend/untp/: releases.py
frontend/: pyproject.toml
frontend/app/plugins/: publisher.py  traction.py
frontend/app/routes/admin/: __init__.py
frontend/app/routes/issuer/: __init__.py
