[project]
name = "orgbook-publisher-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "PatStLouis",email = "patrick.st-louis@opsecid.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "flask-qrcode (>=3.2.0,<4.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "black (>=24.10.0,<25.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-bootstrap (>=3.3.7.1,<4.0.0.0)",
    "flask-colorpicker (>=0.9,<0.10)",
    "pydantic (>=2.10.6,<3.0.0)",
    "jsonpath-ng (>=1.7.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
